--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/teal_700"
     android:orientation="vertical"
     tools:context=".view.registration.RegisterFragment">
 
@@ -28,6 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
-
+        android:textColor="@color/teal_700"
+        android:textStyle="bold"
+        android:background="@drawable/custom_button"
         android:text="Register" />
 </LinearLayout>
