--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -33,4 +33,13 @@
         android:textStyle="bold"
         android:background="@drawable/custom_button"
         android:text="Register" />
+    <TextView
+        android:id="@+id/login"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:text="Login"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:layout_marginTop="50dp"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
