--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -146,11 +146,12 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/add_developer_btn"
         android:backgroundTint="@color/teal_700"
         android:contentDescription="@null"
         android:src="@drawable/baseline_add_24"
-        app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@color/white"
         app:useCompatPadding="true" />
 </androidx.constraintlayout.widget.ConstraintLayout>
