--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -33,7 +33,11 @@
         android:id="@+id/homeFragment"
         android:name="com.example.developers.view.developers.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_addDeveloperFragment"
+            app:destination="@id/addDeveloperFragment" />
+    </fragment>
     <fragment
         android:id="@+id/allDeveloperFragment"
         android:name="com.example.developers.view.developers.AllDeveloperFragment"
