--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -33,10 +33,12 @@
         android:id="@+id/homeFragment"
         android:name="com.example.developers.view.developers.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_addDeveloperFragment"
-            app:destination="@id/addDeveloperFragment" />
+            app:destination="@id/addDeveloperFragment"
+
+            />
         <action
             android:id="@+id/action_homeFragment_to_allDeveloperFragment"
             app:destination="@id/allDeveloperFragment" />
