--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -28,9 +28,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textColor="@color/teal_700"
         android:layout_marginTop="50dp"
         android:background="@drawable/custom_button"
-        android:text="Login" />
+        android:text="Login"
+        android:textColor="@color/teal_700"
+        android:textStyle="bold" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/create_new_account"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/custom_button"
+        android:text="Create New Account"
+        android:textColor="@color/teal_700"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 </LinearLayout>
