--- a/app/src/main/res/layout/developer_item.xml
+++ b/app/src/main/res/layout/developer_item.xml
@@ -28,8 +28,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:text="Heba"
-            android:textColor="@color/black"
-            android:textSize="17sp"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/dev_img"
             app:layout_constraintTop_toTopOf="@id/dev_img" />
 
@@ -40,8 +40,8 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:text="Senior"
-            android:textColor="@color/black"
             android:textSize="17sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/dev_img"
             app:layout_constraintTop_toBottomOf="@id/dev_name" />
 
