--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="68dp"
         android:layout_marginEnd="30dp"
         android:hint="E-mail" />
 
@@ -23,23 +23,48 @@
         android:layout_margin="30dp"
         android:hint="Password" />
 
+    <ProgressBar
+        android:id="@+id/register_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:layout_marginTop="50dp" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
-        android:textColor="@color/teal_700"
-        android:textStyle="bold"
         android:background="@drawable/custom_button"
-        android:text="Register" />
-    <TextView
-        android:id="@+id/login"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center"
-        android:text="Login"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:layout_marginTop="50dp"
-        android:layout_height="wrap_content"/>
+        android:text="Register"
+        android:textColor="@color/teal_700"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <TextView
+            android:id="@+id/account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20sp"
+            android:layout_marginTop="20dp"
+            android:text="Already have an account? "
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:text="Login"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+    </LinearLayout>
 </LinearLayout>
