--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -33,14 +33,14 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="60dp"
             android:layout_marginEnd="30dp"
-            android:hint="E-mail" />
+            android:hint="@string/e_mail" />
 
         <EditText
             android:id="@+id/pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
-            android:hint="Password" />
+            android:hint="@string/password" />
 
         <ProgressBar
             android:id="@+id/login_progress"
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/custom_button"
-            android:text="Login"
+            android:text="@string/login"
             android:textColor="@color/teal_700"
             android:textStyle="bold" />
 
@@ -71,7 +71,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
-                android:text="I don't have an account"
+                android:text="@string/i_don_t_have_an_account"
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 android:textStyle="bold" />
@@ -83,7 +83,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
-                android:text="Register"
+                android:text="@string/register"
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 android:textStyle="bold" />
